    message.
  - Clean up the config.php file
    - Remove the two pretty url variables and replace it with one
      variable that can have three values.  This should help eliminate 
      a few problems.
    - Add a set_names variable that allows databases to use utf-8 by default
      on new installs (true on new installs, false is assumed).
    - Remove old, invalid config entries.

- Menu Manager
  - Complete rewrite of the admin interface.  It is now much easier to 
    understand, and also possible to select different a different default 
    template.

- News 
  - #2620 Extra fields are not displayed in the print template
  - #3163 Typo in News module
  - #3277 Drafts are not saved properly in News 2.9.3
  - Fixed problem with incorrect counts (counting draft articles) in browsecat
    action.

- Module Manager
  - Now supports checking for newer versions of installed modules.
  - Now does dependency checking before allowing a download of a module.

- Libs Updates: 
  - xAjax 0.5
  - script.aculo.us 1.8.2 (included  Update to Prototype 1.6.0.3)
  - Dynamic Tabs 1.0.3

- TinyMCE
  - Rewrote profile handling allowing both a simple and an advanced profile 
    in backend
  - Rewrote frontenddetection to be more stable
  - Improved Filepicker dialogue allowing on-the-fly scaling of images
  - Updated to Tiny-distribution, including a rewritten more intelligent Paste
    plugin

- Printing
  - Now supports simple output from modules

- Search
  - Template, added a class to submit and adjustments.
  - New Param for method Post (pretty urls) - 
    E.g. {search search_method="post"}
  - Remove Help Tab
  - Add better statistics capabilities.

- Default Themes
  - New theme NCleanBlue (thank you Nuno).
  - Numerous new themes for default content (thank you Mark).


Version 1.5.4 - Carolina
-----------------------------
- Fix the logout/session issue once and for all.
- Fix the canonical expressions in default templates.


Version 1.5.3 - Arecibo